# agent-onboarding-ml

./: .env.example  .gitignore  QUICKSTART.md  README.md  aiu.py  app_config.py  chat_session_store.py  deep_agent_profile.py  deepagents_libs.py  deepagents_runtime.py  error_log_store.py  ml-agent  ml-agent.cmd  ml_agent.py  ml_agent_tui.py  prompt_store.py  prompt_templates.json  pyproject.toml  qwen_chat.py  run_model.py  run_sora_model.py
.opencode/: .gitignore  README.md  opencode.jsonc  tui.json
.opencode/agent/: deep-agent.md
.opencode/themes/: deep-agent.json
aiu/: __init__.py  __main__.py  aiu_run.py  test_aiu_run.py
deep_agent/: __init__.py  app_config.py  cli.py  libs.py  path_utils.py  qwen_chat.py  runtime.py  tui.py
deep_agent/stores/: __init__.py  chat_session_store.py  error_log_store.py  prompt_store.py
deep_agent/wiki/: README.md
deepagents_source/: README.md
skills/: README.md
skills/agent-evaluation/: SKILL.md
skills/analyze-mlflow-trace/: SKILL.md
skills/closed-network-validation/: SKILL.md
skills/error-log-repair/: SKILL.md
skills/job-template-draft/: SKILL.md
skills/mlflow-ai-gateway/: SKILL.md
skills/mlflow-experiment-tracking/: SKILL.md
skills/mlflow-prompt-management/: SKILL.md
skills/mlflow-prompt-optimization/: SKILL.md
skills/mlflow-registration-check/: SKILL.md
tests/: test_ml_agent.py
wiki/: README.md
wiki/prompts/: prompt_templates.md
work/large-sora-video-model/: README.md  ai_studio.env  config.json  input_example.json  mlflow_ai_studio_logging.py  requirements.txt  run_model.py  train.py
(+20 files in other folders)
