[project]
name = "ai-ml-onboarding"
version = "0.1.0"
description = "Console POC for AI ML onboarding launch modes"
requires-python = ">=3.10"

[project.optional-dependencies]
deepagents = ["deepagents>=0.6.8", "langchain-openai>=0.3"]
tui = ["textual>=0.85"]

[project.scripts]
aiu = "aiu.__main__:main"
ml-agent = "ml_agent:main"

[tool.setuptools]
py-modules = [
    "app_config",
    "chat_session_store",
    "deep_agent_profile",
    "deepagents_libs",
    "deepagents_runtime",
    "error_log_store",
    "ml_agent",
    "ml_agent_tui",
    "prompt_store",
    "qwen_chat",
]

packages = ["aiu"]
