[project]
name = "ai-ml-onboarding"
version = "0.1.0"
description = "Console POC for AI ML onboarding launch modes"
requires-python = ">=3.10"

[project.optional-dependencies]
deepagents = ["deepagents>=0.6.8", "langchain-openai>=0.3"]
tui = ["textual>=0.85"]

[project.scripts]
aiu = "aiu.__main__:main"
ml-agent = "aiu.__main__:main"

[tool.setuptools]
packages = ["aiu", "deep_agent", "deep_agent.stores"]

[tool.setuptools.package-data]
deep_agent = [
    "prompts/*.json",
    "skills/*/SKILL.md",
    "skills/README.md",
    "wiki/README.md",
    "wiki/prompts/*.json",
    "wiki/prompts/*.md",
    "vendor/deepagents/README.md",
    "vendor/deepagents/deepagents-main/LICENSE",
    "vendor/deepagents/deepagents-main/README.md",
    "vendor/deepagents/deepagents-main/libs/**",
]
